--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,23 @@ a:hover {
   color: #535bf2;
 }
 
+html[data-theme-light="true"] {
+  --bg-color: #ffffff;
+  --text-color: #213547;
+}
+
+html:not([data-theme-light="true"]) {
+  --bg-color: #121212;
+  --text-color: #ffffff;
+}
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 h1 {
