--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -17,3 +17,10 @@
   display: flex;
   gap: 10px;
 }
+.languageButtonContainer {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 5px;
+  width: 4rem;
+}
