--- a/src/styles/SearchBar.module.css
+++ b/src/styles/SearchBar.module.css
@@ -8,21 +8,9 @@
 .input {
   flex: 1;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid;
   border-radius: 5px;
   font-size: 1rem;
-}
-
-.button {
-  padding: 10px 20px;
-  background-color: #2196f3;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-.button:hover {
-  background-color: #1976d2;
+  background-color: var(--text-color);
+  color: var(--bg-color);
 }
