--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
-#root {
-  margin: 0 auto;
-  text-align: center;
-  width: 100%;
-  height: 100vh;
-  padding: 0 2rem;
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  min-height: 100vh;
+  box-sizing: border-box;
+  padding: var(--header-height) 1rem 1rem;
 }
