declare header height var

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --header-height: 70px;
 }
 
 body.light {
@@ -76,7 +78,6 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
 }
 
