--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
   min-height: 100vh;
 }
 
