--- a/src/styles/WeatherCard.module.css
+++ b/src/styles/WeatherCard.module.css
@@ -3,8 +3,7 @@
   border-radius: 15px;
   background-color: var(--card-bg);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 80%;
-  margin: 20px auto;
+  margin: 20px 0;
   font-family: sans-serif;
   text-align: center;
   color: var(--card-text);
