--- a/src/styles/WeatherCard.module.css
+++ b/src/styles/WeatherCard.module.css
@@ -7,6 +7,23 @@
   font-family: sans-serif;
   text-align: center;
   color: var(--card-text);
+  width: 90%;
+}
+.closeButtonContainer {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.closeButton {
+  background: none;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  color: var(--card-text);
+}
+
+.closeButton:hover {
+  opacity: 0.5;
 }
 
 .cityName {
